# rcp

./: .gitignore  README.md
api copy/: Makefile
rcp_shared_rs_code/: .gitignore  Cargo.toml
rcp_shared_rs_code/src/: lib.rs  models.rs
rcp_shared_rs_code/src/models/: book_source.rs  haccp_value.rs  ingredient.rs  oven_fan_value.rs  recipe.rs  recipe_request.rs  step.rs  temperature.rs  temperature_unit.rs  yield.rs
web-api/: .gitignore  Cargo.toml  Makefile  docker-compose.yml
web-api/src/: db.rs  error.rs  handler.rs  main.rs
web-frontend/: Cargo.toml  bootstrap.js  package.json  webpack.config.js
web-frontend/src/: add_recipe.rs  app.rs  lib.rs  recipe.rs  recipe_list.rs  reroute_agent.rs
web-frontend/static/: index.html  style.scss
